<resources>
    <string name="app_name">Halal Zone</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Welcome To</string>
    <string name="cna">Create New Account</string>

    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <string name="forgot_password">Forgot Your Password ?</string>


    <string name="name_placeholder">Name</string>
    <string name="phone_placeholder">Phone</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="terms_and_conditions">I Would like to receive your newsletter and other promotional information.</string>
    <string name="username">Username,</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="qibla_direction">Qibla Direction</string>
    <string name="prayer_time">Prayer Time</string>
    <string name="Videos">Videos</string>
    <string name="Offers">Offers</string>
    <string name="post_offer">Post Offer</string>
    <string name="review_complaint">Review A Complaint</string>
    <string name="selling">Selling</string>
    <string name="manage_business_profile">Manage Business Profile</string>
    <string name="business_profile">Business Profile</string>
    <string name="manage_business">Manage Business</string>
    <string name="manage_requests">Manage Requests</string>
    <string name="treat_complaint">Treat A Complaint</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_contect">Manage Content</string>
    <string name="user">User</string>
    <string name="business">Business</string>
    <string name="admin">Admin</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>