<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="200dp"
    android:gravity="center"
    tools:context=".GateActivity">

    <TextView
        android:id="@+id/_TITLE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/_APP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/_TITLE"
        android:fontFamily="@font/poppins"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="814dp"
        android:layout_below="@id/_APP"
        android:layout_margin="50dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/USER_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/user" />

        <Button
            android:id="@+id/BUS_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/middle"
            android:fontFamily="@font /poppins_bold"
            android:text="@string/business" />

        <Button
            android:id="@+id/ADMIN_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/admin" />
    </LinearLayout>

</RelativeLayout>