<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="200dp"
    android:gravity="center"
    tools:context=".BusniessLoginActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_in_to_continue"
        android:textAlignment="center"
        android:textColor="@color/primary" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="326dp"
        android:layout_height="237dp"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/_EMAIL_INPUT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/secondary"
            android:ems="20"
            android:hint="@string/email_placeholder"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:outlineSpotShadowColor="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

        <EditText
            android:id="@+id/_PASSWORD_INPUT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/secondary"
            android:ems="20"
            android:hint="@string/password_placeholder"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/LOG_LOGIN_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login" />



    </LinearLayout>

</RelativeLayout>