<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/_RESTAURANT_CARD"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/manage_requests_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:labelFor="@id/_RESTAURANT_CARD"
                    android:text="@string/manage_requests"
                    android:textAlignment="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/_SHOP_CARD"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/treat_complaint_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:labelFor="@id/_RESTAURANT_CARD"
                    android:text="@string/treat_complaint" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/_PRAYER_CARD"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/manage_users_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:labelFor="@id/_PRAYER_CARD"
                    android:text="@string/manage_users" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/_OFFERS_CARD"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/videos_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:labelFor="@id/_OFFERS_CARD"
                    android:text="@string/manage_contect" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>